--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "idu-staffing-manager",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "homepage": "https://joechan96-dc.github.io/idu-staff-manager-v2/",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
-  }
+	"name": "idu-staffing-manager",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"homepage": "https://joechan96-dc.github.io/idu-staff-manager-v2/",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	},
+	"dependencies": {
+		"lucide-react": "^0.344.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.64",
+		"@types/react-dom": "^18.2.21",
+		"@vitejs/plugin-react": "^4.2.1",
+		"gh-pages": "^6.3.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.1.4"
+	}
 }
